--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ float: left;
                  /* Tablets */
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   body{
-    margin: 20px 15px;
+    margin: 0;
   } 
   h1{
     font-size: 100px;
